@@ -2,6 +2,8 @@
   - enhancement: ability to connect to irc servers with password protection
     using 'password' setting in 'irc' section of default.ini
   - enhancement: pipe codes for colors/modes are now supported in ircchat.py.
+  - bugfix: msgarea.py fix unread message count (only include messages the
+    user can view)
 2.0.13
   - bugfix: previously the 'stop/more/continuous' prompt was not pausing news
     output in the appropriate place. prompt_pager also deals with wrapped lines
